사용자정의 강의기능 추가, 수강편람 업데이트

--- a/data/htm/2012_S_basics_all.htm
+++ b/data/htm/2012_S_basics_all.htm
@@ -1613,9 +1613,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">주기평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1626,9 +1626,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">주기평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1639,9 +1639,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">주기평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1733,7 +1733,7 @@
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김하라&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1746,7 +1746,7 @@
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김하라&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1759,7 +1759,7 @@
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김하라&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2499,7 +2499,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">220-202&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2512,7 +2512,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">220-202&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2525,7 +2525,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">220-202&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3085,7 +3085,7 @@
 <td class="pstyle2">월&nbsp;1,2,3,4.5-1.5,4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">이소영&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3098,7 +3098,7 @@
 <td class="pstyle2">수&nbsp;1,2,3,4.5-1.5,4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">이소영&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3111,7 +3111,7 @@
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">이소영&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4369,9 +4369,9 @@
 <td class="pstyle2">생물학실험&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-101&nbsp;</td>
+<td class="pstyle2">504-108&nbsp;</td>
 <td class="pstyle2">이일하&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4382,9 +4382,9 @@
 <td class="pstyle2">생물학실험&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-101&nbsp;</td>
+<td class="pstyle2">504-108&nbsp;</td>
 <td class="pstyle2">이일하&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4397,7 +4397,7 @@
 <td class="pstyle2">1-0-2&nbsp;</td>
 <td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-101&nbsp;</td>
+<td class="pstyle2">504-109&nbsp;</td>
 <td class="pstyle2">성노현&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4410,7 +4410,7 @@
 <td class="pstyle2">1-0-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-101&nbsp;</td>
+<td class="pstyle2">504-109&nbsp;</td>
 <td class="pstyle2">성노현&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4421,9 +4421,9 @@
 <td class="pstyle2">생물학실험&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-101&nbsp;</td>
+<td class="pstyle2">504-110&nbsp;</td>
 <td class="pstyle2">박동은&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4434,9 +4434,9 @@
 <td class="pstyle2">생물학실험&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-101&nbsp;</td>
+<td class="pstyle2">504-110&nbsp;</td>
 <td class="pstyle2">박동은&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4447,9 +4447,9 @@
 <td class="pstyle2">생물학실험&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-102&nbsp;</td>
+<td class="pstyle2">504-111&nbsp;</td>
 <td class="pstyle2">허원기&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4460,9 +4460,9 @@
 <td class="pstyle2">생물학실험&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-102&nbsp;</td>
+<td class="pstyle2">504-111&nbsp;</td>
 <td class="pstyle2">허원기&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4475,7 +4475,7 @@
 <td class="pstyle2">1-0-2&nbsp;</td>
 <td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-102&nbsp;</td>
+<td class="pstyle2">504-112&nbsp;</td>
 <td class="pstyle2">노정혜&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4488,7 +4488,7 @@
 <td class="pstyle2">1-0-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">504-102&nbsp;</td>
+<td class="pstyle2">504-112&nbsp;</td>
 <td class="pstyle2">노정혜&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
