--- a/data/htm/2012_S_basics_foreign.htm
+++ b/data/htm/2012_S_basics_foreign.htm
@@ -833,9 +833,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">주기평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -846,9 +846,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">주기평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -859,9 +859,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">주기평&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -953,7 +953,7 @@
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김하라&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -966,7 +966,7 @@
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김하라&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -979,7 +979,7 @@
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김하라&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1719,7 +1719,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">220-202&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1732,7 +1732,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">220-202&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1745,7 +1745,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">220-202&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2188,7 +2188,7 @@
 <td class="pstyle2">월&nbsp;1,2,3,4.5-1.5,4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">이소영&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2201,7 +2201,7 @@
 <td class="pstyle2">수&nbsp;1,2,3,4.5-1.5,4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">이소영&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2214,7 +2214,7 @@
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">이소영&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
