--- a/timetable.htm
+++ b/timetable.htm
@@ -21,20 +21,21 @@
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script> 
 		<script src="/javascripts/exportpng.js" type="text/javascript"></script> 
 		<script src="/javascripts/timetable.js" type="text/javascript"></script> 
-
 		<script type="text/javascript">
 
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-31273143-1']);
-			_gaq.push(['_trackPageview']);
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-31273143-1']);
+		  _gaq.push(['_setDomainName', 'snutt.kr']);
+		  _gaq.push(['_trackPageview']);
 
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
+		  (function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
 
 		</script>
+
 	</head> 
 	<body ondragstart="return false" onselectstart="return false"> 
 		<!-- facebook test -->
@@ -74,7 +75,7 @@
 					</ul>
 					<ul class="nav pull-right">
 						<li id="facebook_like_li">
-						<div class="fb-like" data-href="http://example.com" data-send="true" data-layout="button_count" data-width="170" data-show-faces="false" data-colorscheme="dark"></div>
+						<div class="fb-like" data-href="http://snutt.kr" data-send="true" data-layout="button_count" data-width="170" data-show-faces="false" data-colorscheme="dark"></div>
 						</li>
 					</ul>
 				</div>
@@ -386,7 +387,7 @@
 			</div>
 
 			<div id="social_comment_wrapper">
-				<div class="fb-comments" data-href="http://example.com" data-num-posts="5" data-width="500" id="social_comment"></div>
+				<div class="fb-comments" data-href="http://snutt.kr" data-num-posts="5" data-width="500" id="social_comment"></div>
 			</div>
 
 			<div id="footer">
