초기 로딩화면 추가

--- a/timetable.htm
+++ b/timetable.htm
@@ -403,13 +403,21 @@
 			</div>
 
 		</div> <!-- /container -->
+		<div id="init_loading_modal">
+			<div id="init_loading_image">
+				<img src="/images/loading.gif" alt="init-loading" />
+			</div>
+			<p>
+			로딩중입니다. 잠시만 기다려 주세요.
+			</p>
+		</div>
 
 		<div id="facebook_loading_modal">
 			<div id="facebook_loading_image">
 				<img src="/images/loading.gif" alt="facebook-loading" />
 			</div>
 			<p>
-			이미지를 등록중입니다. 잠시만 기다려주세요.
+			이미지를 등록중입니다. 잠시만 기다려 주세요.
 			</p>
 		</div>
 		<div id="custom_lecture_modal">
